2002-02-20  David Emory Watson  <dwatson@cs.ucr.edu>

	* src/file-manager/fm-directory-view.c:
	(update_scripts_menu): Avoid race condition by resetting
	scripts_invalid flag before we build the script menus.
	(update_directory_in_scripts_menu): Simplified code. 
	(add_scripts_directory): Moved into
	(add_directory_to_scripts_directory_list): here.
	(remove_scripts_directory): Renamed to
	(remove_directory_from_scripts_directory_list): this.
	(update_scripts_menu): Made code more readable.

2002-02-20  Jens Finke <jens@triq.net>

	* src/file-manager/fm-desktop-icon-view.c
	(change_background_callback): Call gnome2 background setting
	program.

2002-02-20  jacob berkman  <jacob@ximian.com>

	* src/file-manager/nautilus-indexing-info.c:
	(show_index_progress_dialog), (show_last_index_time_dialog),
	(show_indexing_info_dialog):
	s/g_signal_connect_object/g_signal_connect_swapped/, as this was
	gtk_signal_connect_object which is not the same as
	g_signal_connect_object

2002-02-20  Michael Meeks  <michael@ximian.com>

	* components/throbber/nautilus-throbber.c
	(nautilus_throbber_set_small_mode): remove usize
	mis-use.

	* components/text/nautilus-text-view.c: remove
	bogus ghttp include.

	* components/music/nautilus-music-view.c
	(image_button_callback): upd. signal handling.
	(xpm_dual_label_box, xpm_label_box): upd. container
	border width.
	(nautilus_music_view_update): fix leak & upd.
	path handling.

	* components/music/mpg123.c (eval_id3_format),
	(mpg123_format_song_title): upd. path handling.

	* components/hardware/main.c: include string.h

	* components/hardware/nautilus-hardware-view.c
	(setup_form_title): use gnome_program_locate_file.

	* components/hardware/Makefile.am,
	* components/sample/Makefile.am,
	* components/tree/Makefile.am,
	* components/text/Makefile.am,
	* components/throbber/Makefile.am,
	* components/music/Makefile.am: add disable
	deprecated cflags.

	* components/Makefile.am: remove image_viewer

	* configure.in: upd.
